# batch-infer

./: .gitignore  .gitlab-ci.yml  .gitmodules  NOTES.md  README.md  SRSF1.fasta  batch-infer  result_model.ipynb  run_alphafold.bsub  setup_alphafold_run_script.sh
batch-infer/: EXAMPLE.ipynb  INSTALL.ipynb  README.md  batch-infer  batch-infer.ipynb
batch-infer/software/: openfold-setup.ipynb
batch-infer/workflow/: Snakefile
fastafiles/: IFGSC_6mer.fasta
openfold/: README.md  openfold-eu  sbatch-multimer
openfold/config/: config.yaml
openfold/software/: helixfold3-setup.ipynb
openfold/workflow/: Snakefile
postprocessing/: setup.cfg
results/: alphafold3_stats.ipynb
results/alphafold3_adhoc_examples/: alphafold3_adhoc_examples.ipynb  config.yaml
results/alphafold3_ecoli/: README.md  alphafold3_jsons.ipynb  alphafold3_msas.ipynb  alphafold3_predictions.ipynb  config.yaml  retry_alphafold3_msas.ipynb  retry_alphafold3_predictions.ipynb
results/alphafold3_examples/: config.yaml
results/alphafold3_predmulti/: alphafold3_msasm.ipynb  alphafold3_predmultb.ipynb  alphafold3_predmulti.ipynb
results/alphafold3_runtime/: af3_predict_runtime.ipynb
results/alphafold3_tests/: summary.ipynb  summary.md
results/alphafold3_yeast/: config.yaml  (+2 more)
setup_run_script/: run_alphafold.bsub  setup_alphafold_run_script.sh
setup_run_script_AF2.3.1/: setup_alphafold_run_script.sh
setup_run_script_AF2.3.2/: generate_SLURM_script.py  generate_singularity_cmd.py
setup_run_script_container/: .generate_singularity_cmd.py.swp  generate_SLURM_script.py  generate_singularity_cmd.py
software/: chai1-setup.ipynb
workflow/: Snakefile
(+103 files in other folders)
