[metadata]
name = postprocessing
version = attr: postprocessing.__version__
description = alphafold2 postprocessing
long_description = file: README.md
long_description_content_type = text/markdown
author = Gerhard Bräunlich
author_email = gerhard.braeunlich@id.ethz.ch
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
project_urls =
    Source = https://gitlab.ethz.ch/sis/alphafold_on_euler
scripts = postprocessing.py

[options]
packages = find:
zip_safe = False
python_requires = >=3.9
install_requires =
    matplotlib

[options.extras_require]
pymol = pymol

[options.packages.find]
exclude =
    test
    test.*
